--- a/.github/workflows/Code_review.yml
+++ b/.github/workflows/Code_review.yml
@@ -1,41 +1,36 @@
-# This is a basic workflow to help you get started with Actions
+name: Code Review
 
-name: Code Review # you can provide any name
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
-jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+permissions:
+  contents: read
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
+jobs:
+  review:
+    runs-on: ubuntu-latest
+    # Skip PRs from forks (no secrets available)
+    if: ${{ github.event.pull_request.head.repo.fork == false }}
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
 
-      # Runs a single command using the runners shell
-      - name: Curie-review
+      - name: Run Curie review
+        env:
+          CURIE_API_KEY: ${{ secrets.CURIE_API_KEY }}
         run: |
-          curl -X POST "https://platform.curietech.ai/api/code-review/run" \
-            -H "Authorization: Bearer ${{ secrets.CURIE_API_KEY }}" \
+          set -euo pipefail
+          # Build JSON safely
+          payload=$(jq -n \
+            --arg org_name "CurieTech-demo" \
+            --arg repo_name "${GITHUB_REPOSITORY#*/}" \
+            --arg branch_name "${{ github.head_ref }}" \
+            --argjson pr_number ${{ github.event.pull_request.number }} \
+            --arg prompt "CI-triggered code review" \
+            '{conn_type:"github", org_name:$org_name, repo_name:$repo_name, branch_name:$branch_name, pr_number:$pr_number, prompt:$prompt}')
+
+          curl -sS --fail -X POST "https://platform.curietech.ai/api/code-review/run" \
+            -H "Authorization: Bearer ${CURIE_API_KEY}" \
             -H "Content-Type: application/json" \
-            -d '{
-              "conn_type": "github",
-              "org_name": "CurieTech-demo", # provide your org name here
-              "repo_name": "'"${GITHUB_REPOSITORY#*/}"'",
-              "branch_name": "'"${{ github.head_ref || github.ref_name }}"'",
-              "pr_number": ${{ github.event.pull_request.number }},
-              "prompt": "CI-triggered code review" # you can change the prompt according to your wish
-            }'
+            -d "$payload"
